Handle errors and lines

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Added by THE team
+code.txt
+lexical_errors.txt
+scanner.txt
 
 # Created by https://www.gitignore.io/api/intellij+all
 # Edit at https://www.gitignore.io/?templates=intellij+all
