Handle errors in parser

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # Added by THE team
-code.txt
-lexical_errors.txt
-scanner.txt
-parse-tree.txt
+runtime/*
 
 # Created by https://www.gitignore.io/api/intellij+all
 # Edit at https://www.gitignore.io/?templates=intellij+all
